// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary with multiple items 1`] = `
<div>
  <h1>
    Viewing 
    12
     
    expenses
     totalling 
    $123.45
  </h1>
</div>
`;

exports[`should render summary with one item 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.34
  </h1>
</div>
`;
